--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -12,7 +12,7 @@ description = "Manage the challenges in scraping data for academic research."
 ## Open Graph
 images = ["doks.png"]
 ogLocale = "en_US"
-domainTLD = "webdata-marketing.netlify.app"
+domainTLD = "web-scraping.org"
 titleHome = "Scraping Web Data for Marketing Insights"
 
 ## Twitter Cards
