add proper domain

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://webdata-marketing.netlify.app/"
+baseurl = "https://web-scraping.org"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
