--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 # Meta Data for SEO
 
 ## Homepage
-title = "Scraping Web Data for Marketing Insights"
+title = "Web Data"
 titleSeparator = "-"
 titleAddition = "Web companion"
 description = "Manage the challenges in scraping data for academic research."
