--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@
 ## Homepage
 title = "web-scraping.org"
 titleSeparator = "-"
-titleAddition = "Web scraping and APIs for academic research."
+titleAddition = "web scraping and APIs for academic research"
 description = "Manage the challenges in scraping data for academic research."
 
 ## Documentation
