--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -80,7 +80,7 @@ lastMod = false
   lazySizes = true
   clipBoard = true
   instantPage = true
-  flexSearch = true
+  flexSearch = false
   darkMode = true
   bootStrapJs = true
   breadCrumb = false
