--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,10 +61,10 @@ footer = "Copyright (c) 2022. <a class=\"text-muted\" href=\"/contact\">Contact<
 copyRight = "Copyright (c) 2022 by the authors."
 
 # Alert
-alert = false
-alertDismissable = false
+alert = true
+alertDismissable = true
 # alertText = "Introducing the Doks child theme, several DX + UX updates, and more! <a class=\"alert-link stretched-link\" href=\"https://getdoks.org/blog/doks-v0.2/\" target=\"_blank\" rel=\"noopener\">Check out Doks v0.2</a>"
-alertText = "Introducing the Doks child theme, several DX + UX updates, and more! <a class=\"alert-link stretched-link\" href=\"https://getdoks.org/blog/doks-v0.2/\">Check out Doks v0.2</a>"
+alertText = "Join the webinar on June 23, 2022 - <a class=\"alert-link stretched-link\" href=\"https://www.ama.org/events/webinar/jm-webinar-series-insights-for-managers/\">Sign up now!</a>"
 
 # Edit Page
 # repoHost [Github | Gitea | GitLab | Bitbucket | BitbucketServer ] is used for building the edit link based on git hoster
